# kobe-PD

./: .dockerignore  .gitignore  Dockerfile  README.md  base_train.csv  data_filtered_dev.csv  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
conf/base/: catalog.yml  parameters.yml  parameters_aplicacao_prod.yml  parameters_preparacao_dados.yml  parameters_treinamento.yml
conf/local/: mlflow.yml
data/03_primary/: primary_dev.csv
data/04_feature/: data_filtered.parquet
data/05_model_input/: base_prod_x.csv  base_prod_y.csv  base_test.csv  base_test.parquet  base_train.parquet
data/06_models/: DT_model.pkl  api_model.pkl  best_model.pkl
data/07_model_output/: DT_data_prod_y_pred.csv  DT_data_prod_y_pred.parquet  DT_data_prod_y_proba.csv  DT_data_prod_y_proba.parquet  DT_test_predictions.csv  DT_test_predictions.parquet  DT_test_probs.csv  RL_data_prod_y_pred.csv  RL_data_prod_y_pred.parquet  RL_data_prod_y_proba.csv  RL_data_prod_y_proba.parquet  RL_test_predictions.csv  RL_test_predictions.parquet  RL_test_probs.csv  inferencia_streamlit.csv
data/08_reporting/: DT_prod_metrics.csv  DT_test_metrics.csv  RL_prod_metrics.csv  RL_test_metrics.csv  best_model_test_metrics.csv
docs/source/: conf.py  index.rst
notebooks/: 01.preparacao.ipynb  02.feature_engineering.ipynb  04.treinamento.ipynb  05.predict_com_prod.ipynb  preparacao.ipynb  train_test.ipynb
src/kobe/: __init__.py  __main__.py  pipeline_registry.py  settings.py
streamlit/: main.py  main_API.py
streamlit/pages/: arvore_de_decisao.py
(+14 files in other folders)
